--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form action="/logout" method="post">
-        <input type="submit" value="Sign Out"/>
+        <input type="submit" th:value="#{button.logout}"/>
     </form>
 
     <div>
