--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -9,11 +9,18 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
+<header th:insert="blocks/header :: header"></header>
+
+
 <h1 th:text="#{registration.title}"></h1>
+<div class="container mt-5 mb-5">
+
 <form action="/registration" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
+    <div><label><div th:text="#{login}"></div> <input type="text" name="username" class="form-control"/> </label></div>
+    <div><label><div th:text="#{password}"></div> <input type="password" name="password" class="form-control"/> </label></div>
+    <div><button name="submit" type="submit" class="btn btn-success" th:text="#{button.sign_up}"></button></div>
+
 </form>
+</div>
 </body>
 </html>
