--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <title th:text="#{login}"></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/internationalization.js"></script>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
@@ -17,9 +17,15 @@
     <div th:if="${param.logout}" th:text="#{login.logout}"></div>
 
     <form name="f" th:action="@{/login}" method="post" onsubmit="return validate()">
-        <div><label><div th:text="#{login}"></div> <input type="text" name="username" class="form-control"/> </label></div>
-        <div><label><div th:text="#{password}"></div> <input type="password" name="password" class="form-control"/> </label></div>
-        <div><button name="submit" type="submit" class="btn btn-success" th:text="#{button.sign_in}"></button></div>
+        <div><label>
+            <div th:text="#{login}"></div>
+            <input type="text" name="username" class="form-control"/> </label></div>
+        <div><label>
+            <div th:text="#{password}"></div>
+            <input type="password" name="password" class="form-control"/> </label></div>
+        <div>
+            <button name="submit" type="submit" class="btn btn-success" th:text="#{button.sign_in}"></button>
+        </div>
     </form>
 </div>
 <a href="/registration">Registration</a>
