--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,7 +5,7 @@
     <title th:text="#{registration}"></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/internationalization.js"></script>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
@@ -15,12 +15,18 @@
 <h1 th:text="#{registration.title}"></h1>
 <div class="container mt-5 mb-5">
 
-<form action="/registration" method="post">
-    <div><label><div th:text="#{login}"></div> <input type="text" name="username" class="form-control"/> </label></div>
-    <div><label><div th:text="#{password}"></div> <input type="password" name="password" class="form-control"/> </label></div>
-    <div><button name="submit" type="submit" class="btn btn-success" th:text="#{button.sign_up}"></button></div>
+    <form action="/registration" method="post">
+        <div><label>
+            <div th:text="#{login}"></div>
+            <input type="text" name="username" class="form-control"/> </label></div>
+        <div><label>
+            <div th:text="#{password}"></div>
+            <input type="password" name="password" class="form-control"/> </label></div>
+        <div>
+            <button name="submit" type="submit" class="btn btn-success" th:text="#{button.sign_up}"></button>
+        </div>
 
-</form>
+    </form>
 </div>
 </body>
 </html>
