--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
     <div th:if="${param.error}" th:text="#{login.error}"></div>
     <div th:if="${param.logout}" th:text="#{login.logout}"></div>
 
-    <form name="f" th:action="@{/login}" method="post" onsubmit="return validate()">
+    <form name="f" th:action="@{/login}" method="post" onsubmit="return va;  lidate()">
         <div><label>
             <div th:text="#{login}"></div>
             <input type="text" name="username" class="form-control"/> </label></div>
