--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,9 +5,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
-<form action="/logout" method="post">
-    <input type="submit" th:value="#{button.logout}"/>
-</form>
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h5 class="my-0 mr-md-auto font-weight-normal"><h1 th:inline="text">Hello
+        [[${#httpServletRequest.remoteUser}]]!</h1></h5>
+    <nav class="my-2 my-md-0 mr-md-3">
+
+        <a class="p-2 text-dark" href="/">Главная</a>
+        <a class="p-2 text-dark" href="/blog">Блог</a>
+        <a class="p-2 text-dark" href="/blog/add">Добавить статью</a>
+        <a class="p-2 text-dark" href="/about">Про нас</a>
+    </nav>
+
+
+    <a class="btn btn-outline-primary" href="/logout" th:text="#{button.logout}"></a>
+
+    <span th:text="#{lang.change}"></span>:
+    <a class="btn btn-outline-primary" href="?lang=en" th:text="#{lang.eng}"></a>
+    <a class="btn btn-outline-primary" href="?lang=ua" th:text="#{lang.ua}"></a>
+</div>
 
 <div>
     <form method="post" action="/main">
