--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -23,25 +23,13 @@
     <a class="btn btn-outline-primary" href="?lang=en" th:text="#{lang.eng}"></a>
     <a class="btn btn-outline-primary" href="?lang=ua" th:text="#{lang.ua}"></a>
 </div>
-
-<div>
-    <form method="post" action="/main">
-        <input type="text" name="text" placeholder="Введите сообщение"/>
-        <input type="text" name="tag" placeholder="Введите тег"/>
-        <button type="submit">Добавить</button>
-    </form>
-</div>
-<div>Список сообщений</div>
-<form method="post" action="/filter">
-    <input type="text" name="filter">
-
-    <button type="submit">Найти</button>
-</form>
-<div th:each="el : ${messages}" class="alert alert-info mt-2">
+<h1 th:text="#{greeting.main}"></h1>
+<div th:each="el : ${roomsFromBD}" class="alert alert-info mt-2">
     <div>
-        <b th:text="${el.id}"></b>
-        <span th:text="${el.text}"></span>
-        <i th:text="${el.tag}"></i>
+        <b th:text="${el.number}"></b>
+        <span th:text="${el.capacity}"></span>
+        <i th:text="${el.type}"></i><br><br>
+        <a th:href="'/room/' + ${el.id}" class="btn btn-warning" th:text="#{button.order}"></a>
     </div>
 </div>
 </body>
