--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,13 +1,10 @@
 <div th:fragment="header">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal"><h1 th:inline="text">Hello
-            [[${#httpServletRequest.remoteUser}]]!</h1></h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal" th:inline="text">Hello
+            [[${#httpServletRequest.remoteUser}]]!</h5>
         <nav class="my-2 my-md-0 mr-md-3">
 
             <a class="p-2 text-dark" href="/">Главная</a>
-            <a class="p-2 text-dark" href="/blog">Блог</a>
-            <a class="p-2 text-dark" href="/blog/add">Добавить статью</a>
-            <a class="p-2 text-dark" href="/about">Про нас</a>
         </nav>
         <a class="btn btn-outline-primary" href="/login" th:text="#{button.sign_in}"></a>
         <a class="btn btn-outline-primary" href="/registration" th:text="#{button.sign_up}"></a>
