--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/internationalization.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
@@ -22,15 +23,14 @@
     </div>
     <form action="/registration" method="post">
         <div><label>
-            <div th:text="#{login}"></div>
-            <input type="text" name="username" class="form-control"/> </label></div>
+            <label th:text="#{login}" for="username"></label>
+            <input type="text" id="username" name="username" class="form-control"/> </label></div>
         <div><label>
-            <div th:text="#{password}"></div>
-            <input type="password" name="password" class="form-control"/> </label></div>
+            <label th:text="#{password}" for="password"></label>
+            <input type="password" id="password" name="password" class="form-control"/> </label></div>
         <div>
-            <button name="submit" type="submit" class="btn btn-success" th:text="#{button.sign_up}"></button>
+            <button name="submit" type="submit" class="btn btn-success" th:text="#{button.sign_in}"></button>
         </div>
-
     </form>
 </div>
 </body>
