--- a/src/main/resources/templates/user-stat.html
+++ b/src/main/resources/templates/user-stat.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-    <h5 class="my-0 mr-md-auto font-weight-normal"><h1 th:inline="text">Hello
-        [[${#httpServletRequest.remoteUser}]]!</h1></h5>
+    <h5 class="my-0 mr-md-auto font-weight-normal" th:inline="text">
+        [[${#httpServletRequest.remoteUser}]]</h5>
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="/">Главная</a>
+        <a class="btn btn-outline-primary" href="/main" th:text="#{main}"></a>
     </nav>
     <a class="btn btn-outline-primary" href="/logout" th:text="#{button.logout}"></a>
 
@@ -29,18 +29,18 @@
 
 <div th:each="el : ${applicationList}" class="alert alert-info mt-1">
     <div>
-        <b th:text="${el.startDate}"></b>
-        <span th:text="${el.finishDate}"></span>
-        <i th:text="${el.user.username}"></i><br><br>
+        <b th:text="${el.user.username}"></b><br><br>
+        <span th:text="${el.startDate}"></span> -
+        <span th:text="${el.finishDate}"></span><br>
         <i th:text="${el.room.number}"></i><br><br>
         <i th:text="${el.room.type}"></i><br><br>
         <i th:text="${el.room.capacity}"></i><br><br>
 
-        <form th:method="post" th:action="'/statistics/' + ${el.id} + '/del'">
-            <div>
-                <button name="submit" type="submit" class="btn btn-warning" th:text="#{button.delete}"></button>
-            </div>
-        </form>
+        <!--        <form th:method="post" th:action="'/statistics/' + ${el.id} + '/del'">-->
+        <!--            <div>-->
+        <!--                <button name="submit" type="submit" class="btn btn-warning" th:text="#{button.delete}"></button>-->
+        <!--            </div>-->
+        <!--        </form>-->
     </div>
 </div>
 </body>
