--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,13 +8,12 @@
 </head>
 <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-    <h5 class="my-0 mr-md-auto font-weight-normal"><h1 th:inline="text">Hello
-        [[${#httpServletRequest.remoteUser}]]!</h1></h5>
+    <h5 class="my-0 mr-md-auto font-weight-normal" th:inline="text">
+        [[${#httpServletRequest.remoteUser}]]</h5>
     <nav class="my-2 my-md-0 mr-md-3">
-
-        <a class="p-2 text-dark" href="/">Главная</a>
+        <a class="btn btn-outline-primary" href="/statistics" th:text="#{button.statistics}"></a>
+        <a class="p-2 text-dark" href="/deposite" th:text="#{button.addCashAccount}"></a>
     </nav>
-
 
     <a class="btn btn-outline-primary" href="/logout" th:text="#{button.logout}"></a>
 
